service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test123
  namespace: test01
spec:
  selector:
    app: dotnetdemo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
